--- a/index.html
+++ b/index.html
@@ -7,22 +7,12 @@
 	<link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 <body>
-	<div class="container" ng-controller="mainController">
-		<div class="row">
-			<div class="col-md-4 col-md-offset-4" ng-if="user == null">
-				<button class="btn btn-block btn-social btn-facebook" scope="public_profile,email" ng-click="fbLogin()">
-					<i class="fa fa-facebook"></i> Sign in with Facebook
-				</button>
-			</div>
-			<div class="col-md-4 col-md-offset-4" ng-if="user != null">
-				Login !!!
-				{{user}}
-			</div>
-		</div>
+	<div class="container">
+		<div ui-view></div>
 	</div>
 	<script type="text/javascript" src="assets/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
-	<script type="text/javascript" src="assets/js/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="assets/js/angular-ui-router/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 	<script type="text/javascript" src="assets/js/service.js"></script>
 </body>
