--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<div ui-view></div>
+		<ui-view/>
 	</div>
 	<script type="text/javascript" src="assets/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
