--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="sellsukiFacebook">
+<html ng-app="sellsukiApp">
 <head>
 	<title>Sellsuki - Facebook comment</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,8 @@
 	<script type="text/javascript" src="assets/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular-ui-router/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="assets/js/script.js"></script>
+	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/controller.js"></script>
 	<script type="text/javascript" src="assets/js/service.js"></script>
 </body>
 </html>
