Get notification list, show with object, and show all comment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</div>
 	<script type="text/javascript" src="assets/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
+  	<script type="text/javascript" src="js/ui-bootstrap-tpls-0.13.0.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular-ui-router/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 	<script type="text/javascript" src="assets/js/controller.js"></script>
