Change gulp file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Sellsuki - Facebook comment</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<link rel="stylesheet" href="assets/stylesheets/style.css">
+	<link rel="stylesheet" href="assets/stylesheets/style.min.css">
 </head>
 <body>
 	<div class="container">
@@ -12,10 +12,7 @@
 	</div>
 	<script type="text/javascript" src="assets/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
-  	<script type="text/javascript" src="js/ui-bootstrap-tpls-0.13.0.min.js"></script>
 	<script type="text/javascript" src="assets/js/angular-ui-router/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="assets/js/app.js"></script>
-	<script type="text/javascript" src="assets/js/controller.js"></script>
-	<script type="text/javascript" src="assets/js/service.js"></script>
+	<script type="text/javascript" src="assets/javascript/main.min.js"></script>
 </body>
 </html>
