--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="assets/stylesheets/style.min.css">
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<ui-view/>
 	</div>
 	<script type="text/javascript" src="assets/javascript/jquery/jquery.min.js"></script>
