--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
 	<link rel="stylesheet" href="assets/stylesheets/style.min.css">
 </head>
 <body>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="http://www.sellsuki.com/" target="_blank">
+					<img src="assets/img/logo-header.png">
+				</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<p class="navbar-text navbar-right" style="margin-right: 0px;"><b>Facebook Comment API - Sellsuki</b></p>
+			</div>
+		</div>
+	</nav>
 	<div class="container-fluid">
 		<ui-view/>
 	</div>
 	<script type="text/javascript" src="assets/javascript/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/javascript/jquery.slimscroll.min/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/angular/angular.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/angular-ui-router/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/angular-ui-utils/keypress.min.js"></script>
